# HGSPICE

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
scripts/: cleanAll  cleanCM  cleanTest  plotGen.pl  tag.sh
scripts/EKVparam/: ekvModel.m  invq.m
scripts/GnuPlotTemplate/: I.plt  V.plt  VI.plt  template.plt
src/: CMakeLists.txt  main.cpp  parser.tar  tag.sh
src/analyzer/: ACAnalysis.cpp  ACAnalysis.h  Analysis.cpp  Analysis.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  DCAnalysis.cpp  DCAnalysis.h  OPAnalysis.cpp  OPAnalysis.h  TranAnalysis.cpp  TranAnalysis.h
src/ckt/: CMakeLists.txt  Ckt.cpp  Ckt.h  Generic.cpp  Generic.h  SubCkt.cpp  SubCkt.h
src/dev/: CMakeLists.txt  DevBase.cpp  DevBase.h  Devices.h  SrcFunc.cpp  SrcFunc.h
src/dev/cap/: CapInst.cpp  CapInst.h  CapModel.cpp  CapModel.h
src/dev/cccs/: CCCSInst.cpp  CCCSInst.h  CCCSModel.cpp  CCCSModel.h
src/dev/ccvs/: CCVSInst.cpp  CCVSInst.h  CCVSModel.cpp  CCVSModel.h
src/dev/diode/: DiodeInst.cpp  DiodeInst.h  DiodeModel.cpp  DiodeModel.h
src/dev/ind/: IndInst.cpp  IndInst.h  IndModel.cpp  IndModel.h
src/dev/isrc/: ISrcInst.cpp  ISrcInst.h  ISrcModel.cpp  ISrcModel.h
src/dev/mos/: MosInst.cpp  MosInst.h  MosModel.cpp  MosModel.h
src/dev/res/: ResInst.cpp  ResInst.h  ResModel.cpp  ResModel.h
src/dev/vccs/: VCCSInst.cpp  VCCSInst.h  VCCSModel.cpp  VCCSModel.h
src/dev/vcvs/: VCVSInst.cpp  VCVSInst.h  VCVSModel.cpp  VCVSModel.h
src/dev/vsrc/: VSrcInst.cpp  VSrcInst.h  VSrcModel.cpp  VSrcModel.h
src/dev/xsub/: XSubInst.cpp  XSubInst.h  XSubModel.cpp  XSubModel.h
src/matrix/: CMakeLists.txt  EigenMatrix.cpp  EigenMatrix.h  Matrix.h
src/parser/: CMakeLists.txt  SpParser.l  SpParser.yy
test/: log018.l  test.sp  test_netlist.sp  test_netlist_error.sp
test/ac/: CS_Rload.lis  CS_Rload_P.lis  CS_Rload_bak.lis  PMOS_CS.lis  opamp.sp  plotAmp.plt  plotUni.plt  rcAC.sp  uniAmp.sp  uniAmp_P.sp
test/ac/bak/: CS_Rload_P_bak.lis  PMOS_CS.lis
test/ac/plt/: plotUni_P.plt
test/inv/: buffer.sp  inv.sp  invSub.sp
test/opamp/: opamp.sp
test/rc/: rctran.sp
test/resSub/: resSub.sp  resSub10.sp  resSub100.sp  resSub1000.sp  resSub20.sp  resSub4.sp
test/rlc/: rlcdc.sp  rlcop.sp  rlctran.sp
test/static/: staticDCStamp.sp  staticDCStampSub.sp
test/uniMOS/: NMOS.sp  NMOS_gate.sp  PMOS_drain.sp  PMOS_gate.sp
test/uniMosAmp/: NMOS.sp
