PROJECT(HGSPICE)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/../")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")
SET(SRC_PATH "${CMAKE_SOURCE_DIR}/src/")

#INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(src)
