PROJECT(HGSPICE)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
set(CMAKE_VERBOSE_MAKEFILE off )

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/bin/")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib/")
SET(SRC_PATH "${PROJECT_ROOT_PATH}/src/")
SET(BUILD_PATH "${PROJECT_ROOT_PATH}/build/")

#INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(src)
