SET(CKT_DIR "${SRC_PATH}/ckt/")
SET(PARSER_DIR "${SRC_PATH}/parser/")
SET(DEV_DIR "${SRC_PATH}/dev/")

ADD_SUBDIRECTORY(dev)
ADD_SUBDIRECTORY(ckt)
ADD_SUBDIRECTORY(parser)

INCLUDE_DIRECTORIES(${DEV_DIR})
INCLUDE_DIRECTORIES(${CKT_DIR})
INCLUDE_DIRECTORIES(${PARSER_DIR})

ADD_EXECUTABLE(HGSPICE main.cpp)
TARGET_LINK_LIBRARIES(HGSPICE ckt parser device) 
